fix(text-image): Fix text position in text-image on mobile devices

--- a/AuxilliumWeb/frontend/auxilium-web/src/components/TextImage/TextImage.module.css
+++ b/AuxilliumWeb/frontend/auxilium-web/src/components/TextImage/TextImage.module.css
@@ -10,14 +10,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .textImageText {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 0% 10%;
   font-size: clamp(0.5rem, 10vw, 1.5rem);
   color: var(--paragraph-light);
   text-align: center;
   font-family: Monda;
   z-index: 1;
+  width: 100%;
+  max-width: 80%;
+  box-sizing: border-box;
 }
